Avoid using `-proc:full` when compiling ShardingSphere with OpenJDK23 (#33681)